--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
   </head>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="./css/giphy.css" />
   <body>
     <div id="buttonadd"></div>
-    <input type="text" id="buttondata" /><button id="btn1">Add Button</button>
+    <input type="text" id="buttondata" /><button
+      id="btn1"
+      class="btn btn-primary"
+      type="button"
+    >
+      Add Button
+    </button>
     <div id="output"></div>
     <script src="./js/giphy.js"></script>
   </body>
