--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="./css/giphy.css" />
   <body>
+    <h1>Enter a SuperHero Below</h1>
     <div id="buttonadd"></div>
+
     <input type="text" id="buttondata" /><button
       id="btn1"
       class="btn btn-primary"
